# holdem-rsources

./: Cargo.toml  README.md  bench.sh  presentation.md  presentation_rust_learning.md  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: benchmark.yml  ci.yml
benches/: holdem_benchmarks.rs
dev/bench/: data.js
examples/: advanced_ranges.rs  multiway_equity.rs  weighted_ranges.rs
src/: lib.rs  main.rs
src/core/: card.rs  card_set.rs  equity.rs  evaluator.rs  hand.rs  hand_rank.rs  helpers.rs  mod.rs  range.rs  weighted_range.rs
src/core/equity/: mod.rs  multiway.rs  results.rs
tests/: card_set_tests.rs  equity_tests.rs  evaluator_tests.rs  hand_rank_tests.rs  hand_tests.rs  multiway_equity_tests.rs  range_tests.rs  test_utils.rs  weighted_range_tests.rs
