[package]
name = "holdem-rsources"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.17.1"
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.17"
anyhow = "1.0.100"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "holdem_benchmarks"
harness = false

