[package]
name = "holdem-rsources"
version = "0.1.0"
edition = "2024"

[features]
default = ["parallel"]
parallel = ["rayon"]
wasm = ["getrandom/wasm_js"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
ndarray = "0.17.1"
rand = "0.10.0"
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.17"
anyhow = "1.0.100"
getrandom = "0.4.1"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "holdem_benchmarks"
harness = false

